# Dict

./: .gitignore  LICENSE  README.md  dict.spec  launch-debug.bat  launch-exe.bat  launch.bat  pyproject.toml
dict/: __main__.py  clipboard.py  config.py  controller.py  history.py  hotkey.py  logger.py  qt_settings.py  qt_tray.py  qt_window.py  recorder.py  settings.py  settings_window.py  sounds.py  transcriber.py  tray.py  utils_logging.py  window.py
docs/superpowers/plans/: 2026-04-17-dict-tray-transcriber.md
docs/superpowers/specs/: 2026-04-17-dict-tray-transcriber-design.md
scripts/: gen_assets.py
tests/: test_clipboard.py  test_controller.py  test_history.py  test_logger.py  test_recorder.py  test_settings.py  test_transcriber_smoke.py
