[project]
name = "dict"
version = "0.1.0"
description = "Tray-resident voice-to-clipboard transcriber for Windows"
requires-python = ">=3.10"
dependencies = [
  "faster-whisper>=1.0.3",
  "sounddevice>=0.4.6",
  "numpy>=1.26,<2.3",
  "pynput>=1.7.7",
  "pystray>=0.19.5",
  "pillow>=10.3.0",
  "pyperclip>=1.9.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[project.scripts]
dict = "dict.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dict*"]

[tool.pytest.ini_options]
markers = ["slow: integration tests that load models or touch audio hardware"]
addopts = "-m 'not slow'"
